@@ -1,6 +1,7 @@
 Revision history for Getopt-Euclid
 
 0.x
+  - Fixed too enthusiastic variable interpolation in Euclid specs (RT bug #78854)
   - Fixed bug tracker URL (credits to Kent Fredric)
 
 0.3.6
